Subindo projeto do primeiro módulo

--- a/algalog-api/pom.xml
+++ b/algalog-api/pom.xml
@@ -15,8 +15,6 @@
 	<description>API do AlgaLog</description>
 	<properties>
 		<java.version>11</java.version>
-		<maven.compiler.source>1.11</maven.compiler.source>
-		<maven.compiler.target>1.11</maven.compiler.target>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -30,9 +28,9 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-compiler-plugin</artifactId>
-			<version>3.8.1</version>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
 		</dependency>
 	</dependencies>
 
