--- a/algalog-api/src/main/resources/application.properties
+++ b/algalog-api/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.datasource.url=jdbc:mysql://localhost:3308/algalog?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
 
+spring.jpa.show-sql=true
